# TheAntFarm

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  app_main.py  app_resources.qrc  app_resources_rc.py  build.py  controller_manager.py  controller_thread.py  double_side_manager.py  geometry_manager.py  log_manager.py  newCNC.ui  pcb_manager.py  pyproject.toml  requirements.txt  serial_channel.py  serial_manager.py  serial_thread.py  settings_manager.py  style_manager.py  the_ant_farm.py  the_ant_farm.ui  ui_manager.py  ui_newCNC.py  ui_the_ant_farm.py  view_thread.py  vispy_qt_widget.py  visual_manager.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
controller/: controller_align.py  controller_control.py  controller_manager.py  controller_view.py
macros/: tool_change_tlo.gcode  tool_change_wcs.gcode
settings_manager/: settings_app.py  settings_gcode_files.py  settings_job.py  settings_machine.py  settings_manager.py
shape_core/: commands_manager.py  gcode_manager.py  geometry_manager.py  macros_manager.py  path_manager.py  path_optimizer.py  pcb_manager.py  plot_stuff.py  pyclipper2shapely.py  visual_manager.py
src/TheAntFarm/: app_resources.qrc  app_resources_rc.py  build.py  combobox_filter_enter.py  double_side_manager.py  executable_path_checker.py  hook-vispy.py  log_manager.py  qcamera_label.py  qledlabel.py  serial_manager.py  setup.py  style_manager.py  the_ant_farm.py  the_ant_farm.spec  the_ant_farm.ui  (+2 more)
ui_manager/: ui_align_tab.py  ui_control_tab.py  ui_create_job_tab_manager.py  ui_manager.py  ui_settings_preferences.py  ui_view_load_layer_tab.py
(+28 files in other folders)
