[tool.poetry]
name = "TheAntFarm"
version = "0.2.1"
description = "TheAntFarm is an application that simplifies the PCB creation using CNC machines."
authors = ["The Ant Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
cairocffi = "0.9.0"
cffi = "1.14.5"
freetype-py = "2.2.0"
hsluv = ">=5.0.2"
kiwisolver = "1.3.2"
numpy = "1.22.3"
pcb-tools = "0.1.6"
pyclipper = "1.2.1"
pycparser = "2.20"
PyOpenGL = "3.1.5"
PySide2 = "5.15.2.1"
qimage2ndarray = "1.8.3"
scipy = "1.8.0"
Shapely = "1.8.1"
shiboken2 = "5.15.2.1"
vispy = "0.9.4"
opencv-python = ">=4.5.1.48"

dynamic = ["version"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
