[tool.poetry]
name = "TheAntFarm"
version = "0.3.0"
description = "TheAntFarm is an application that simplifies the PCB creation using CNC machines."
authors = ["The Ant Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
cairocffi = "0.9.0"
cffi = "1.17.1"
freetype-py = "2.5.1"
hsluv = ">=5.0.2"
kiwisolver = "1.4.8"
numpy = "2.2.4"
pcb-tools = "0.1.6"
pyclipper = "1.3.0.post6"
pycparser = "2.22"
PyOpenGL = "3.1.9"
PySide6 = "6.8.3"
qimage2ndarray = "1.10.0"
scipy = "1.15.2"
Shapely = "2.0.7"
shiboken2 = "6.8.3"
vispy = "0.14.3"
opencv-python = ">=4.11.0.86"

dynamic = ["version"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
